generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "debian-openssl-3.0.x"]
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

/// USER_ACCOUNT
model UserAccount {
  userId          Int       @id @default(autoincrement()) @map("USER_ID")
  email           String    @unique @map("USER_EMAIL")
  password        String?   @map("USER_PASSWORD")
  provider        String?   @map("PROVIDER") // "email", "google", or "email,google" (legacy "both" may exist in old rows)
  lastLogin       DateTime? @map("LAST_LOGIN_AT")
  createdAt       DateTime  @default(now()) @map("CREATE_AT")
  updatedAt       DateTime  @updatedAt @map("UPDATE_AT")
  tutorialDone    Boolean   @default(false) @map("TUTORIAL_DONE")
  role            Role      @default(User) @map("ROLE")
  status          Boolean   @default(true) @map("STATUS")
  emailVerifiedAt DateTime? @map("EMAIL_VERIFIED_AT")
  timeZone        String?   @map("TIME_ZONE")

  // Relations
  profiles            UserProfile[]        @relation("UserToProfile")
  requests            UserRequest[]        @relation("UserRequests")
  handledRequests     UserRequest[]        @relation("AdminRequests")
  ownedRelationships  UserRelationship[]   @relation("OwnerUser")
  viewedRelationships UserRelationship[]   @relation("ViewerUser")
  deviceTokens        DeviceToken[]
  refreshTokens       RefreshToken[]
  passwordResetTokens PasswordResetToken[]

  @@map("USER_ACCOUNT")
}

/// DEVICE_TOKEN
model DeviceToken {
  deviceTokenId Int       @id @default(autoincrement()) @map("DEVICE_TOKEN_ID")
  token         String    @unique @map("TOKEN")
  userId        Int       @map("USER_ID")
  platform      String?   @map("PLATFORM")
  deviceId      String?   @map("DEVICE_ID")
  lastSeenAt    DateTime  @default(now()) @map("LAST_SEEN_AT")
  createdAt     DateTime  @default(now()) @map("CREATED_AT")
  updatedAt     DateTime  @updatedAt @map("UPDATED_AT")

  // Relations
  user UserAccount @relation(fields: [userId], references: [userId])

  @@map("DEVICE_TOKEN")
}

/// REFRESH_TOKEN – server-controlled session tokens
model RefreshToken {
  id        Int      @id @default(autoincrement()) @map("REFRESH_TOKEN_ID")
  token     String   @unique @map("TOKEN") @db.VarChar(512)
  userId    Int      @map("USER_ID")
  expiresAt DateTime @map("EXPIRES_AT")
  createdAt DateTime @default(now()) @map("CREATED_AT")

  // Relations
  user UserAccount @relation(fields: [userId], references: [userId])

  @@map("REFRESH_TOKEN")
}

/// VERIFICATION_TOKEN – OTP codes for email verification
model VerificationToken {
  id         Int      @id @default(autoincrement()) @map("VT_ID")
  identifier String   @map("IDENTIFIER") @db.VarChar(255) // email address
  token      String   @map("TOKEN") @db.VarChar(10) // 6-digit code
  expires    DateTime @map("EXPIRES_AT")
  createdAt  DateTime @default(now()) @map("CREATED_AT")

  @@unique([identifier, token])
  @@map("VERIFICATION_TOKEN")
}

/// PASSWORD_RESET_TOKEN – Magic links / deep links for password reset
model PasswordResetToken {
  id        Int      @id @default(autoincrement()) @map("PRT_ID")
  token     String   @unique @map("TOKEN") @db.VarChar(255)
  userId    Int      @map("USER_ID")
  expiresAt DateTime @map("EXPIRES_AT")
  createdAt DateTime @default(now()) @map("CREATED_AT")

  // Relations
  user UserAccount @relation(fields: [userId], references: [userId])

  @@map("PASSWORD_RESET_TOKEN")
}

/// USER_PROFILE
model UserProfile {
  profileId      Int     @id @default(autoincrement()) @map("PROFILE_ID")
  userId         Int     @map("USER_ID")
  profileName    String  @map("PROFILE_NAME")
  profilePicture String? @map("PROFILE_PICTURE")

  // Relations
  user           UserAccount     @relation("UserToProfile", fields: [userId], references: [userId])
  medicationLogs MedicationLog[]
  medicineLists  MedicineList[]

  @@map("USER_PROFILE")
}

/// MEDICINE_DATABASE
model MedicineDatabase {
  mediId        Int          @id @default(autoincrement()) @map("MEDI_ID")
  mediThName    String       @map("MEDI_TH_NAME") @db.VarChar(500)
  mediEnName    String       @map("MEDI_EN_NAME") @db.VarChar(500)
  mediTradeName String?      @map("MEDI_TRADE_NAME") @db.VarChar(500)
  mediType      MedicineType @map("MEDI_TYPE")
  mediUse       String?      @map("MEDI_USE") @db.VarChar(500)
  mediGuide     String?      @map("MEDI_GUIDE") @db.VarChar(500)
  mediEffects   String?      @map("MEDI_EFFECTS") @db.VarChar(500)
  mediNoUse     String?      @map("MEDI_NO_USE") @db.VarChar(500)
  mediWarning   String?      @map("MEDI_WARNING") @db.VarChar(500)
  mediStore     String?      @map("MEDI_STORE") @db.VarChar(500)
  mediPicture   String?      @map("MEDI_PICTURE") @db.VarChar(500)
  createdAt     DateTime     @default(now()) @map("CREATED_AT")
  updatedAt     DateTime     @updatedAt @map("UPDATE_AT")
  mediStatus    Boolean      @default(true) @map("MEDI_STATUS")
  adminId       Int?         @map("ADMIN_ID")

  // Relations
  medicineLists MedicineList[]

  @@map("MEDICINE_DATABASE")
}

/// MEDICINE_LIST
model MedicineList {
  mediListId    Int     @id @default(autoincrement()) @map("MEDI_LIST_ID")
  profileId     Int     @map("PROFILE_ID")
  mediId        Int?    @map("MEDI_ID") // Optional: user can create without linking to medicine database
  mediNickname  String? @map("MEDI_NICKNAME") @db.VarChar(25)
  pictureOption String? @map("PICTURE_OPTION")

  // Relations
  profile  UserProfile           @relation(fields: [profileId], references: [profileId])
  medicine MedicineDatabase?     @relation(fields: [mediId], references: [mediId]) // Optional relation
  regimens UserMedicineRegimen[]
  logs     MedicationLog[]

  @@map("MEDICINE_LIST")
}

/// USER_REQUEST
model UserRequest {
  requestId      Int           @id @default(autoincrement()) @map("REQUEST_ID")
  userId         Int           @map("USER_ID")
  requestType    RequestType   @map("REQUEST_TYPE")
  requestTitle   String        @map("REQUEST_TITLE")
  requestDetails String        @map("REQUEST_DETAILS")
  status         RequestStatus @default(PENDING) @map("STATUS")
  adminId        Int?          @map("ADMIN_ID")
  createdAt      DateTime      @default(now()) @map("CREATED_AT")
  updatedAt      DateTime      @updatedAt @map("UPDATED_AT")
  picture        String?       @map("PICTURE")

  // Relations
  user  UserAccount  @relation("UserRequests", fields: [userId], references: [userId])
  admin UserAccount? @relation("AdminRequests", fields: [adminId], references: [userId])

  @@map("USER_REQUEST")
}

/// USER_RELATIONSHIP
model UserRelationship {
  relationshipId  Int                @id @default(autoincrement()) @map("RELATIONSHIP_ID")
  ownerUserId     Int                @map("OWNER_USER_ID")
  viewerUserId    Int                @map("VIEWER_USER_ID")
  receiverEmail   String             @map("RECEIVER_EMAIL")
  profileIds      Json?              @map("PROFILE_IDS")
  status          RelationshipStatus @default(PENDING) @map("STATUS")
  viewerNickname  String?            @map("VIEWER_NICKNAME")
  viewerPicture   String?            @map("VIEWER_PICTURE")
  ownerNickname   String?            @map("OWNER_NICKNAME")
  ownerPicture    String?            @map("OWNER_PICTURE")
  createdAt       DateTime           @default(now()) @map("CREATED_AT")
  updatedAt       DateTime           @updatedAt @map("UPDATED_AT")

  // Relations
  ownerUser  UserAccount @relation("OwnerUser", fields: [ownerUserId], references: [userId])
  viewerUser UserAccount @relation("ViewerUser", fields: [viewerUserId], references: [userId])

  @@map("USER_RELATIONSHIP")
}

/// MEDICATION_LOG
model MedicationLog {
  logId          Int             @id @default(autoincrement()) @map("LOG_ID")
  profileId      Int             @map("PROFILE_ID")
  mediListId     Int             @map("MEDI_LIST_ID")
  scheduleTime   DateTime        @map("SCHEDULE_TIME")
  pushSentAt     DateTime?       @map("PUSH_SENT_AT")
  responseStatus ResponseStatus? @map("RESPONSE_STATUS")
  responseAt     DateTime?       @map("RESPONSE_AT")
  snoozedCount   Int?            @map("SNOOZED_COUNT")
  nextSnoozeAt   DateTime?       @map("NEXT_SNOOZE_AT")
  dose           Int?            @map("DOSE")
  unit           String?         @map("UNIT")
  mealRelation   MealRelation?   @map("MEAL_RELATION")
  note           String?         @map("NOTE")

  // Relations
  profile      UserProfile  @relation(fields: [profileId], references: [profileId])
  medicineList MedicineList @relation(fields: [mediListId], references: [mediListId])

  @@unique([profileId, mediListId, scheduleTime])
  @@map("MEDICATION_LOG")
}

/// USER_MEDICINE_REGIMEN
model UserMedicineRegimen {
  mediRegimenId    Int          @id @default(autoincrement()) @map("MEDI_REGIMEN_ID")
  mediListId       Int?         @map("MEDI_LIST_ID")
  scheduleType     ScheduleType @map("SCHEDULE_TYPE")
  startDate        DateTime     @map("START_DATE")
  endDate          DateTime?    @map("END_DATE")
  daysOfWeek       String?      @map("DAYS_OF_WEEK")
  intervalDays     Int?         @map("INTERVAL_DAYS")
  intervalHour     Int?         @map("INTERVAL_HOUR")
  nextOccurrenceAt DateTime?    @map("NEXT_OCCURRENCE_AT")

  // Relations
  medicineList MedicineList?             @relation(fields: [mediListId], references: [mediListId])
  times        UserMedicineRegimenTime[]

  @@map("USER_MEDICINE_REGIMEN")
}

/// USER_MEDICINE_REGIMEN_TIME
model UserMedicineRegimenTime {
  timeId        Int          @id @default(autoincrement()) @map("TIME_ID")
  mediRegimenId Int          @map("MEDI_REGIMEN_ID")
  timeOfDay     String       @map("TIME_OF_DAY")
  dose          Int          @map("DOSE")
  unit          String       @map("UNIT")
  mealRelation  MealRelation @map("MEAL_RELATION")


  // Relations
  regimen UserMedicineRegimen @relation(fields: [mediRegimenId], references: [mediRegimenId])

  @@map("USER_MEDICINE_REGIMEN_TIME")
}

// ENUMS

enum Role {
  SuperAdmin
  Admin
  User
}

enum MedicineType {
  ORAL
  TOPICAL
}

enum RequestType {
  PROBLEM
  ADD_MEDICINE
  NOTIFICATION
  FUNCTION
  OTHER
}

enum RequestStatus {
  PENDING
  REJECTED
  DONE
}

enum RelationshipStatus {
  PENDING
  APPROVED
  REJECTED
  CANCELLED
}

enum ResponseStatus {
  TAKE
  SKIP
  SNOOZE
}

enum ScheduleType {
  DAILY
  WEEKLY
  INTERVAL
}

enum MealRelation {
  BEFORE_MEAL
  AFTER_MEAL
  WITH_MEAL
  NONE
}
